src/sass/pages/_home.scss
@use '../abstracts/mixins' as mixin;
@use '../abstracts/variables' as var;

// ----- GRID DISPLAY
.grid {
  display: grid;
  gap: var.$grid-gap;
  grid-template-rows: var.$grid-rows;
  grid-template-columns: var.$grid-cols;
  margin-top: var.$grid-marg-top;

  @include mixin.breakpoint(sm) {
    grid-template-rows: var.$grid-rows-sm;
    margin-top: var.$grid-marg-top-sm;
  }

  @include mixin.breakpoint(lg) {
    grid-template-rows: var.$grid-rows-lg;
    grid-template-columns: var.$grid-cols-lg;
    margin-top: var.$grid-marg-top-lg;
  }

  &__item {
    display: grid;
    grid-template-rows: auto min-content;
    padding: var.$grid-item-padd;
    border-radius: var.$grid-item-radius;
    color: var.$grid-item-clr;
    font-weight: var.$grid-item-fw;
    font-size: var.$grid-item-fs;

    img {
      align-self: start;
      margin-left: auto;
    }

    .title {
      align-self: end;
      color: inherit;
    }

    // --- Graphic Design
    &:nth-child(1) {
      grid-column: 1/3;
      grid-row: 1/3;
    }

    // --- UI/UX
    &:nth-child(2) {
      grid-column: 1/2;
      grid-row: 4/3;

      @include mixin.breakpoint(sm) {
        grid-column: 3/4;
        grid-row: 2/1;
      }
    }

    // --- Apps
    &:nth-child(3) {
      grid-column: 2/3;
      grid-row: 4/3;

      @include mixin.breakpoint(sm) {
        grid-column: 4/5;
        grid-row: 2/1;
      }
    }

    // --- Photography
    &:nth-child(4) {
      grid-column: 1/3;
      grid-row: -2/-2;

      @include mixin.breakpoint(lg) {
        grid-column: 5/7;
        grid-row: -3/-2;
      }
    }

    // --- Illustrations
    &:nth-child(5) {
      grid-column: 1/3;
      grid-row: -3/-2;

      @include mixin.breakpoint(sm) {
        grid-column: 3/5;
        grid-row: -3/-2;
      }

      @include mixin.breakpoint(lg) {
        grid-column: -5/-3;
        grid-row: 2/3;
      }
    }

    // --- Motion Graphics
    &:nth-child(6) {
      grid-column: 1/3;
      grid-row: -1/-1;

      @include mixin.breakpoint(sm) {
        grid-column: 3/5;
        grid-row: -2/-1;
      }

      @include mixin.breakpoint(lg) {
        grid-column: 5/7;
        grid-row: -2/-1;
      }
    }
  }
}

// ----- INTRODUCTION
.intro {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: var.$intro-width;
  margin-top: var.$intro-marg-top;

  @include mixin.breakpoint(sm) {
    width: var.$intro-width-sm;
    margin-top: var.$intro-marg-top-sm;
  }

  @include mixin.breakpoint(lg) {
    width: var.$intro-width-lg;
    margin-top: var.$intro-marg-top-lg;
  }

  &__img {
    display: flex;
    justify-content: center;

    @include mixin.breakpoint(sm) {
      display: initial;
    }

    img {
      width: var.$intro-img-width;
      position: unset;

      @include mixin.breakpoint(sm) {
        width: var.$intro-img-width-sm;
        position: absolute;
        left: var.$intro-img-left-pos-sm;
      }

      @include mixin.breakpoint(lg) {
        left: auto;
        width: var.$intro-img-width-lg;
      }
    }
  }

  &__content {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: var.$intro-content-width;
    margin-top: var.$intro-content-marg-top;
    margin-inline: auto;
    text-align: var.$intro-content-text-align;

    @include mixin.breakpoint(sm) {
      justify-content: flex-end;
      width: var.$intro-content-width-sm;
      margin-top: 0;
      margin-inline: unset;
      margin-left: auto;
      text-align: var.$intro-content-text-align-sm;
    }

    @include mixin.breakpoint(lg) {
      width: var.$intro-content-width-lg;
      margin-top: var.$intro-content-marg-top-lg;
    }

    .title {
      color: var.$intro-content-title-clr;
      line-height: var.$intro-content-title-leading;
      font-size: var.$intro-content-title-fs;

      @include mixin.breakpoint(sm) {
        line-height: var.$intro-content-title-leading-sm;
        font-size: var.$intro-content-title-fs-sm;
      }

      @include mixin.breakpoint(lg) {
        line-height: var.$intro-content-title-leading-lg;
        font-size: var.$intro-content-title-fs-lg;
      }
    }

    p {
      margin-top: var.$intro-content-p-marg-top;
    }

    button {
      margin-top: var.$intro-content-btn-marg-top;

      @include mixin.breakpoint(sm) {
        margin-right: auto;
      }
    }
  }
}

// ----- WORK
.work {
  margin-top: var.$work-marg-top;
  text-align: var.$work-text-align;

  @include mixin.breakpoint(sm) {
    margin-top: var.$work-marg-top-sm;
  }

  @include mixin.breakpoint(lg) {
    margin-top: var.$work-marg-top-lg;
  }

  .title {
    color: var.$work-title-clr;
    line-height: var.$work-title-leading;
    font-size: var.$work-title-fs;

    @include mixin.breakpoint(sm) {
      line-height: var.$work-title-leading-sm;
      font-size: var.$work-title-fs-sm;
    }
  }

  &__slider {
    margin-top: var.$work-slider-marg-top;
  }

  &__slide {
    padding-right: var.$work-slider-slide-padding-right;

    @include mixin.breakpoint(sm) {
      padding-right: var.$work-slider-slide-padding-right-sm;
    }

    img {
      border-radius: var.$work-slider-slide-img-radius;
    }
  }
}

// --- Call to Action
.cta {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: var.$cta-gap;
  padding: var.$cta-padd;
  margin-top: var.$cta-marg-top;
  border-radius: var.$cta-radius;
  background-color: var.$cta-bg;
  color: var.$cta-clr;
  text-align: var.$cta-text-align;

  @include mixin.breakpoint(sm) {
    gap: var.$cta-gap-sm;
    padding: var.$cta-padd-sm;
    margin-top: var.$cta-marg-top-sm;
  }

  @include mixin.breakpoint(lg) {
    display: grid;
    grid-template-columns: 1fr auto;
    padding: var.$cta-padd-lg;
    text-align: var.$cta-text-align-lg;
    margin-top: var.$cta-marg-top-lg;
  }

  .title {
    line-height: var.$cta-title-leading;
    font-size: var.$cta-title-fs;

    @include mixin.breakpoint(sm) {
      line-height: var.$cta-title-leading-sm;
      font-size: var.$cta-title-fs-sm;
    }

    @include mixin.breakpoint(lg) {
      margin-right: auto;
      line-height: var.$cta-title-leading-sm;
      font-size: var.$cta-title-fs-sm;
    }
  }

  &__content {
    p {
      margin-top: var.$cta-content-p-marg-top;

      @include mixin.breakpoint(sm) {
        margin-top: var.$cta-content-p-marg-top-sm;
      }

      @include mixin.breakpoint(lg) {
        margin-top: var.$cta-content-p-marg-top-lg;
      }
    }

    @include mixin.breakpoint(lg) {
      grid-column: 1;
      width: var.$cta-content-width-lg;
    }

    &__btn {
      grid-column: 2;
    }
  }
}

